# Cocoon-implementation

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.txt  README.md
ifc_examples/battleship/: Cargo.toml
ifc_examples/battleship-no-ifc/: Cargo.toml  README.md  print-cells.py
ifc_examples/battleship-no-ifc/src/: main.rs  util.rs
ifc_examples/battleship/src/: main.rs  util.rs
ifc_examples/benchmark_games/: README.md  evaluate.sh  evaluate_build.sh
ifc_examples/benchmark_games/binary-trees/: Cargo.toml
ifc_examples/benchmark_games/binary-trees/src/: main.rs
ifc_examples/benchmark_games/data/: analyze.py  requirements.txt
ifc_examples/benchmark_games/dependencies/rug/: Cargo.toml  README.md  RELEASES.md  build.rs
ifc_examples/benchmark_games/dependencies/rug/etc/: appveyor.yml  coverage.sh  extract-doc-tests.sh  gitlab-ci.yml  index-contents.html  invoke-tarpaulin.sh  test.sh  tidy.sh
ifc_examples/benchmark_games/dependencies/rug/src/: lib.rs  macros.rs  misc.rs  ops.rs  ops_prim.rs  rand.rs  serdeize.rs
ifc_examples/benchmark_games/dependencies/rug/src/complex/: arith.rs  big.rs  cmp.rs  mod.rs  ord.rs  serde.rs  small.rs  traits.rs
ifc_examples/benchmark_games/dependencies/rug/src/ext/: mod.rs  xmpc.rs  xmpfr.rs  xmpq.rs  xmpz.rs  xmpz32.rs  xmpz64.rs
ifc_examples/benchmark_games/dependencies/rug/src/float/: arith.rs  big.rs  casts.rs  cmp.rs  mod.rs  ord.rs  serde.rs  small.rs  traits.rs
ifc_examples/benchmark_games/dependencies/rug/src/integer/: arith.rs  big.rs  casts.rs  cmp.rs  division.rs  mod.rs  serde.rs  small.rs  traits.rs
ifc_examples/benchmark_games/dependencies/rug/src/rational/: arith.rs  big.rs  casts.rs  cmp.rs  mod.rs  serde.rs  small.rs  traits.rs
ifc_examples/benchmark_games/fannkuch-redux/: Cargo.toml
ifc_examples/benchmark_games/fasta/: Cargo.toml
ifc_examples/benchmark_games/fasta/src/: main.rs
ifc_examples/benchmark_games/k-nucleotide/: Cargo.toml
ifc_examples/benchmark_games/k-nucleotide/src/: main.rs
ifc_examples/benchmark_games/mandelbrot/: Cargo.toml
ifc_examples/benchmark_games/n-body/: Cargo.toml
ifc_examples/benchmark_games/originals/: README.md
ifc_examples/benchmark_games/pidigits/: Cargo.toml
ifc_examples/benchmark_games/regex-redux/: Cargo.toml
ifc_examples/benchmark_games/spectral-norm/: Cargo.toml  out
ifc_examples/benchmark_games/spectral-norm/src/: main.rs
ifc_examples/counter_examples/: Cargo.toml
ifc_examples/counter_examples/src/: main.rs
ifc_examples/millionaires/: Cargo.toml  results.txt
ifc_examples/millionaires/src/: main.rs  millionaire.rs
ifc_examples/overloaded_operators/: Cargo.toml
ifc_examples/overloaded_operators/src/: main.rs
ifc_examples/paper_calendar/: Cargo.toml  expand.sh  expanded-sample.rs
ifc_examples/paper_calendar/src/: main.rs
ifc_examples/servo/: README.md
ifc_examples/spotify-tui/: eval_spotify.sh
ifc_examples/spotify-tui/rspotify/: Cargo.toml
ifc_examples/spotify-tui/spotify-tui-cocoon/: Cargo.toml  README.md
ifc_examples/spotify-tui/spotify-tui-original/: Cargo.toml
ifc_library/: README.md
ifc_library/macros/: Cargo.toml  README.md
ifc_library/macros/src/: README.md  lib.rs
ifc_library/macros/tests/: Cargo.toml  README.md  autotest.sh  autotest_docker.sh  mut_block_empty_return.rs  no_compile_hello.rs  no_compile_level_change.rs  no_compile_op_bitand.rs  no_compile_op_bitxor.rs  no_compile_op_drop.rs  no_compile_op_fn_mut.rs  no_compile_op_index.rs  no_compile_op_rangebounds.rs  no_compile_print_in_info_leak_free_fn.rs  no_compile_secret_block_evaluates_to_non_secret.rs  not_yet_supported_bit_xorassign.rs  not_yet_supported_op_bitandassign.rs  not_yet_supported_op_bitor.rs  not_yet_supported_op_bitorassign.rs  not_yet_supported_op_rem.rs  op_add.rs  op_add_assign.rs  op_bitand.rs  op_bitxor.rs  op_div.rs  op_divassign.rs  op_eq.rs  op_gt.rs  op_index.rs  op_lt.rs  op_mul.rs  op_mulassign.rs  op_neg.rs  op_neq.rs  op_not.rs  op_rangebounds.rs  op_repeat.rs  op_subassign.rs  op_subtract.rs  promotion_works.rs  (+3 more)
ifc_library/macros/tests/src/: main.rs
ifc_library/secret_structs/: Cargo.toml  README.md
ifc_library/secret_structs/src/: README.md  lattice.rs  lib.rs  main.rs  secret.rs
tests/: README.md  eval-battleship.sh  eval-bm-games.sh  eval-spt.sh  eval.sh  test-all.sh
tests/eval_results/: README.md
tests/eval_results/battleship_samples/: battleship-compile-results-sample.csv  battleship-no-ifc-compile-results-sample.csv  battleship-no-ifc-runtime-results-sample.csv  battleship-results-sample.txt  battleship-runtime-results-sample.csv
tests/eval_results/bm_games_samples/: binary-trees-compile-results-original-sample.csv  binary-trees-compile-results-sample.csv  binary-trees-run-results-sample.csv  bm-games-results-sample.txt  fannkuch-redux-compile-results-original-sample.csv  fannkuch-redux-compile-results-sample.csv  fannkuch-redux-run-results-sample.csv  fasta-compile-results-original-sample.csv  fasta-compile-results-sample.csv  fasta-run-results-sample.csv  (+18 more)
(+47 files in other folders)
