[package]
name = "overloaded_operators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secret_macros = {path = "../../ifc_library/macros"}
secret_structs = {path = "../../ifc_library/secret_structs"}