[package]
name = "secret_macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0.81", features = ["extra-traits", "full"]}
proc-macro2 = "1.0.32"
gensym = "0.1.0"