[package]
name = "fasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
spin = "0.9.4"
secret_structs = { path = "../../../ifc_library/secret_structs" }
secret_macros = { path = "../../../ifc_library/macros" }
